testing: Обновляет версию API и изменяет название сессионного cookie; удаляет устаревшие эндпоинты аутентификации
